--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,12 @@ body {
     margin-bottom: 15px;
 }
 
+#required-fields {
+    color: red;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
 footer {
     text-align: center;
     margin: 0 auto;
