--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
     margin-bottom: 15px;
 }
 
-#required-fields {
+form span {
     color: red;
     font-weight: bold;
     margin-left: 5px;
