--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,16 @@
-body { 
-    padding-top: 70px; 
+.card-title {
+    margin-bottom: 0px
 }
 
 #nav-header {
     box-shadow: 0px 2px 6px 2px rgba(100,100,100,0.5);
-
+    margin-bottom: 30px;
 }
 
 .navbar-header .btn {
-    background-color: #337ab7;
+    background-color: #17a2b8;
     border: 1px solid #fff;
     color: #fff;
-    margin-top: 7px;
     margin-left: 5px;
 }
 
