--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,21 @@
-.card-title {
-    margin-bottom: 0px
-}
-
 #nav-header {
     box-shadow: 0px 2px 6px 2px rgba(100,100,100,0.5);
     margin-bottom: 30px;
 }
 
-#nav-header .btn:first-child {
+#nav-header .fa {
+    margin-right: 7px;
+    height: 19px;
+}
+
+#nav-header > .btn {
     background-color: #17a2b8;
     border: 1px solid #fff;
-    color: #fff;
-    margin-left: 5px;
+    color: #fff;   
 }
 
 #nav-header .btn {
     margin-left: 5px;
-}
-
-#brand-logo {
-    font-size: 24px;
-    color: #1d1d1d;
 }
 
 #current-user {
@@ -28,13 +23,8 @@
     margin-right: 5px;
 }
 
-#brand-logo:hover {
-    text-shadow: 5px 5px 20px hotpink;
-}
-
 .jumbotron-header {
     border-bottom: 1px solid lightgray;
-    margin-bottom: 15px;
 }
 
 form span {
