--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
 * Index.html
 ***********************/
 
+.hide {
+    display: none;
+}
+
 #nav-header {
     box-shadow: 0px 2px 6px 2px rgba(100,100,100,0.5);
     margin-bottom: 30px;
@@ -29,24 +33,12 @@
     margin-right: 5px;
 }
 
-btn-log-out {
-    display: none;
-}
-
 .jumbotron-header {
     border-bottom: 1px solid lightgray;
 }
 
 .card-title {
     margin-bottom: 0px;
-}
-
-#add-train-card {
-    display: none;
-}
-
-#current-user {
-    display: none;
 }
 
 #error-message {
@@ -81,6 +73,8 @@ button .fa {
     margin: 0 auto;
     margin-top: 100px;
 }
+
+
 
 
 
